--- a/nwpt2023/bidirectional-analysis.tex
+++ b/nwpt2023/bidirectional-analysis.tex
@@ -178,10 +178,9 @@ into operators in another poset along a Galois connection: for a given Galois co
 From general discussion about Galois connection,
 $G'(f) \bowtie G'(g) \subseteq G' (f \bowtielift g)$ and $G'(f) \cap G'(g)) \subseteq G'(f \caplift g)$ hold for any $f$ and $g$.
 This fact ensures that the lifted composition operators are sufficiently precise relative to the composition of there ideal counterpart in $\Rel(D, E)$, but does not guarantee their soundness.
-By unpacking the individual definitions of the Galois connections leading to $\Rel(D ,E)$ ($F \dashv G$ , $H \comp F \dashv G \comp I$, $J \comp H \comp F \dashv G \comp I \comp K$), we can confirm all the lifted operators are indeed sound, \emph{except for} the lifted sequential composition operator for $\Bidir(D, E)$, namely, $(\fb , \ff) \bowtielift (\gb , \gf) = H(F((G(I(\fb , \ff)) \bowtie G(I(\gb , \gf)))))$. This phenomenon in $\Bidir(D, E)$ occurs because the butterfly property is not closed under relation composition.
+By unpacking the individual definitions of the Galois connections leading to $\Rel(D ,E)$ ($F \dashv G$ , $H \comp F \dashv G \comp I$, $J \comp H \comp F \dashv G \comp I \comp K$), we can confirm all the lifted operators are indeed sound, \emph{except for} the lifted sequential composition operator for $\Bidir(D, E)$, namely, $(\fb , \ff) \bowtielift (\gb , \gf) = H(F((G(I(\fb , \ff)) \bowtie G(I(\gb , \gf)))))$. This phenomenon in $\Bidir(D, E)$ occurs because the butterfly property is not closed under relation composition $\bowtie$.
 In terms of static analysis, this means that sequentially composed two information flow, each of them is represented by a bidirectional transfer function pair, may not be safely represented by a single bidirectional transfer function pair. This phenomenon does not occur in unidirectional analysis, but only in bidirectional analysis.
 In this work, we present two different technical approaches to address this phenomenon.
 One approach is that use of fact that soundness of lifted operation still hold in the Galois connection between n-ary relations $\Pow(D_{1}, D_{2}, ... , D_{n})$ and multi bidirectional transfer function pairs $((D_{1} \tomon D_{2}) \times (D_{2} \tomon D_{1}) \times ... \times (D_{n-1} \tomon D_{n}) \times (D_{n} \tomon D_{n-1}))$.
-Another approach is that restricting a class of relations so that the composition remains the same class. We show that the poset of $\UnidirConst = ((E \tomon D) \times E, \leq)$ locates between unidirectional and bidirectional and the correspondent class of relations is indeed closed under $\bowtie$ and $\cap$.
-
+Another approach is that restricting a class of relations so that the composition remains the same class. We show that the poset of $\UnidirConst(D, E) = ((E \tomon D) \times E, \leq)$ locates between unidirectional ($\Unidir(D , E$) and bidirectional ($Bidir(D, E$) analysis, and the correspondent class of relations is indeed closed under both $\bowtie$ and $\cap$, hence the lifted operations are sound.
 \end{document}
