fix: put functor definitions in two colomn

--- a/nwpt2023/bidirectional-analysis.tex
+++ b/nwpt2023/bidirectional-analysis.tex
@@ -141,12 +141,9 @@ of unidirectional (backward) transfer functions and pointwise order.
 \end{figure}
 Each Galois connection is given by the following monotone functions.
 \begin{align*}
-  F(R) &= \lambda p_{0}. \bigjoin (p \leq p_{0} \land p \in R) \\
-  G(f) &= \{ p \mid p \leq f(p) \} \\
-  H(f) &= (\lambda e. f (\top , e) , \lambda d. f (d , \top)) \\
-  I(\fb, \ff) &= \lambda p. (\ff (\pi_{1}(p)) , \fb (\pi_{2}(p))) \\
-  J(\fb, \ff) &= \fb \\
-  K(\fb) &= (\fb , \lambda d. \top)
+  F(R) &= \lambda p_{0}. \bigjoin (p \leq p_{0} \land p \in R) &  G(f) &= \{ p \mid p \leq f(p) \} \\
+  H(f) &= (\lambda e. f (\top , e) , \lambda d. f (d , \top)) & I(\fb, \ff) &= \lambda p. (\ff (\pi_{1}(p)) , \fb (\pi_{2}(p))) \\
+  J(\fb, \ff) &= \fb & K(\fb) &= (\fb , \lambda d. \top)
 \end{align*}
 
 By taking an image of a monotone function such that codomain is $\Rel(D, E)$,
